# seqr-loading-pipelines

./: '  .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  Untitled.ipynb  add_annotations.py  clinvar.py  connect_cluster.py  connect_to_cluster.py  convert_tsv_to_key_table.py  convert_tsv_to_vds.py  convert_vcf_to_vds.py  create_cluster.GRCh37.py  create_cluster.GRCh37.sh  create_cluster.GRCh38.py  create_cluster.GRCh38.sh  create_cluster_GRCh37.py  create_cluster_GRCh38.py  create_cluster_notebook.py  create_cluster_with_notebook.py  create_cluster_without_VEP.py  create_cluster_without_VEP.sh  create_snapshot.py  create_subset.py  delete_cluster.py  delete_cluster.sh  describe_cluster.py  download_table_of_variants.py  entire_vds_pipeline.py  entire_vds_pipeline_postprocessing.py  export_callset_to_ES.py  export_coverage.py  export_gene_info.py  export_gnomad_to_ES.py  (+56 more)
luigi_pipeline/: README.md  dev-requirements.txt  load_dataset_v02.py  load_dataset_v02_optimized.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  seqr_gcnv_loading.py  seqr_loading.py  seqr_loading_optimized.py  seqr_mito_loading.py  seqr_sv_loading.py  sex_related_checks.py  t.py  t.tsv  test-requirements.txt
luigi_pipeline/configs/: luigi.cfg  seqr-loading-local-GRCh37.cfg  seqr-loading-local-GRCh38.cfg  seqr-loading-local.cfg  seqr-mito-loading-local.cfg  seqr-sv-loading-local.cfg
luigi_pipeline/configs/optimized_configs/: luigi.cfg  seqr-loading-local.cfg
luigi_pipeline/lib/: global_config.py  hail_tasks.py  hail_vep_runners.py
luigi_pipeline/lib/model/: base_mt_schema.py  gcnv_mt_schema.py  mito_mt_schema.py  seqr_mt_schema.py  sv_mt_schema.py
luigi_pipeline/tests/: seqr_sv_loading_test.py  test_annotation_generation.py  test_hail_tasks.py  test_seqr_gcnv_loading.py  test_seqr_loading_tasks.py  test_seqr_sv_loading.py
luigi_pipeline/tests/data/: gcnv_merged_callset.tsv  gcnv_new_joint_called_callset.tsv  remap_testing.tsv  sample_vep.py  subset_testing.tsv
luigi_pipeline/tests/data/clin_var_37_1kg.ht/: README.txt
luigi_pipeline/tests/data/clin_var_37_1kg.ht/globals/parts/: part-0
luigi_pipeline/tests/data/comb_ref_37_1kg.ht/: README.txt
luigi_pipeline/tests/data/comb_ref_37_1kg.ht/globals/parts/: part-0
luigi_pipeline/tests/data/comb_ref_37_1kg.ht/rows/parts/: part-0-18-0-0-4cd18714-bd0e-d426-ba9b-e49f172c821f  part-1-18-1-0-f78d6ad3-9ed1-80bb-7514-480766ce5f97  part-2-18-2-0-e10ff9c6-cf4a-6e6a-1e0a-26f8f10d4137  part-3-18-3-0-342fd211-c423-0ad8-18b4-8507d7a921db  part-4-18-4-0-bd2bf3b1-e520-1c52-a534-7ccf2df7230e
luigi_pipeline/tests/data/validation_37_coding.ht/: .README.txt.crc  .metadata.json.gz.crc  README.txt
luigi_pipeline/tests/data/validation_37_coding.ht/globals/: .metadata.json.gz.crc
luigi_pipeline/tests/data/validation_37_coding.ht/globals/parts/: .part-0.crc
luigi_pipeline/tests/data/validation_37_coding.ht/rows/: .metadata.json.gz.crc
luigi_pipeline/tests/data/validation_37_coding.ht/rows/parts/: .part-0-3-0-0-d970997a-e245-a7b6-3d8c-ca27eed88670.crc  part-0-3-0-0-d970997a-e245-a7b6-3d8c-ca27eed88670  part-001-4-1-0-a3b18868-4dba-485c-2696-ad97581105a7  part-002-4-2-0-64f71be9-c4ff-9e6f-bbd4-b3b4d8fa2337  part-003-4-3-0-f66c0397-a525-fc29-2197-78f925dba787  part-007-4-7-0-a0ced81a-46b6-dbf1-ef35-a8f55ef35519  part-008-4-8-0-09a855dd-a1d8-3e0b-69f2-5708234bd0f2  part-013-4-13-0-9bee9873-db0a-305b-da55-92cb2376dd12  part-014-4-14-0-cc35fb9a-247a-2d41-f661-f9f3bfdda216  part-023-4-23-0-818ae7ef-6e02-92d9-6a24-66bc0243d047  part-027-4-27-0-4b9cf845-12d1-a8fe-3396-7f0790b6949a  part-035-4-35-0-73376aca-bd84-e2e5-cb8d-8f638b1283ec  part-037-4-37-0-9108e8d7-fbf8-cbbd-9f46-bc3d50d789fa  part-040-4-40-0-1cd2956a-7024-5fe9-d277-6880c305d895  part-041-4-41-0-5ea8a1ea-fc86-f1d5-c321-c03d7bab90dc  part-043-4-43-0-982f9d80-5ed2-03bf-12bc-569fc6803d91  part-044-4-44-0-812b18a7-3bfe-97a7-87b4-ab2e07d47266  part-045-4-45-0-64f20b52-73c9-25da-4751-123ed4313857  part-050-4-50-0-b11b296a-d4ba-bf2a-ddbc-cf09d94ce1db  part-051-4-51-0-8d4a5022-e8c8-f50e-feae-0cbde0a2dc51  part-053-4-53-0-1c06e639-1a2e-d8eb-8cb6-33ce83751f8f  part-056-4-56-0-82f3038d-cc60-5128-cdeb-27978aa45821  part-057-4-57-0-d3b6c827-11e0-d8bc-5cf4-c43ded2cbc5c  part-058-4-58-0-d098797e-1c25-e825-1265-a51163cd0945  part-059-4-59-0-1e05722a-79d9-05be-38b5-9a80537f44aa  part-066-4-66-0-8c3e64c6-72d4-7f53-05ad-dfa643dd61eb  part-068-4-68-0-9f666ea2-bb2f-eb3f-67f0-eab88c6a7c36  part-070-4-70-0-dd6681ad-1faf-0e80-272d-be9be33c7f63  part-072-4-72-0-5666ff87-b993-6015-e9a1-f4f926befb7a  part-074-4-74-0-a748fed0-e1f1-2079-1c64-9d5fdc4df2ff  part-075-4-75-0-c1155e87-224b-65c2-2e13-fe410edaa24c  part-077-4-77-0-9a0b8943-ced3-6a2c-472b-5f89f430b1d8  part-078-4-78-0-824220ce-c08c-1ce4-2de4-a3db13b0896f  part-085-4-85-0-d6f60c3e-92ec-b396-e987-231f63992089  part-087-4-87-0-3ad487cd-ad9d-c4b9-fcce-0939ae4c567b  part-088-4-88-0-b3efe317-93f3-e2b6-273a-c363d78c1a8c  part-092-4-92-0-c9efb52e-6574-f1ba-42a6-ddd103a51220  part-100-4-100-0-2afa3a58-e54d-4549-7853-50f0d7b35480  part-103-4-103-0-4051db01-0b29-0149-6207-e2dd14845729  part-104-4-104-0-6eb80272-ef92-b60f-9274-ba98afd52b36  (+159 more)
luigi_pipeline/tests/data/validation_37_noncoding.ht/: .README.txt.crc  .metadata.json.gz.crc  README.txt
luigi_pipeline/tests/data/validation_37_noncoding.ht/globals/parts/: part-0
luigi_pipeline/tests/data/validation_37_noncoding.ht/rows/: .metadata.json.gz.crc
luigi_pipeline/tests/data/validation_37_noncoding.ht/rows/parts/: .part-0-7-0-0-4609d616-05c0-8bec-2019-0dd313c1d9b3.crc  part-0-7-0-0-4609d616-05c0-8bec-2019-0dd313c1d9b3  part-000-6-0-0-f5a96c65-1e6c-628e-e422-3f162561f17d  part-001-6-1-0-4c552615-95b4-2ec3-31a5-8ba28c393bc2  part-002-6-2-0-3c8a1075-552b-9fad-f049-bfb489b42143  part-003-6-3-0-b762bdea-eb2b-4fe1-9b0f-9cdc80a5d0a6  part-004-6-4-0-71524513-3484-cbdc-a984-388cf9c9e4d7  (+447 more)
luigi_pipeline/tests/model/: test_base_model.py  test_seqr_mt_schema.py
luigi_pipeline/unoptimized_config/: luigi.cfg  luigi.cfg.ext
(+2243 files in other folders)
