[project]
name = "seqr-loading-pipeline"
dynamic = ['version']
requires-python = ">=3.11"
dependencies = [
    "hail==0.2.136",
    "luigi==3.5.2",
    "gnomad==0.8.0",
    "aiofiles==24.1.0",
    "pydantic==2.8.2",
    "clickhouse-driver==0.2.9",
    "slacker==0.14.0",
    "ipywidgets==8.0.6",  # matches pinned version in hail init_notebook.py
    "ipykernel==6.22.0",  # matches pinned version in hail init_notebook.py
    "notebook==6.5.6",    # matches pinned version in hail init_notebook.py
    "nbconvert==7.3.1",   # matches pinned version in hail init_notebook.py
    # Git/URL installs (PEP 508 direct references)
    "gnomad-qc @ git+https://github.com/broadinstitute/gnomad_qc.git@v4.1",
    "onnxconverter-common @ git+https://github.com/microsoft/onnxconverter-common.git@f7a8eb699caa6f6a78d3bdfbcaf5dfbd43569ebd",

    # Dataproc
    "google-cloud-dataproc==5.16.0",
    "google-cloud-bigquery==3.29.0",
    "google-api-python-client==2.159.0",
]

[dependency-groups]
prod = [
    "sqlalchemy<2.0.0" # This is required for the Luigi UI but nothing else.
]
dev = [
    "coverage>=7.2.2",
    "nose-py3>=1.6.3", # bug in regular nose here: https://github.com/nose-devs/nose/issues/1099#issuecomment-577647469
    "responses>=0.23.1",
    "ruff>=0.1.8",
    "shellcheck-py>=0.10.0",
    "pysam",
    "pyarrow",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"v03_pipeline.var" = ["liftover/*.over.chain.gz"]

[tool.setuptools.packages.find]
include = ["v03_pipeline*"]
exclude = ["v03_pipeline.bin", "v03_pipeline.deploy", "v03_pipeline*test*"]
namespaces = false

[tool.ruff]
extend-exclude = [
    'download_and_create_reference_datasets/v02/*',
    'gcloud_dataproc/*',
    'hail_scripts/*',
    'kubernetes/*',
    'luigi_pipeline/lib/*',
    'luigi_pipeline/seqr*.py',
    'luigi_pipeline/tests/data/*',
]
ignore = [
    # Individual Rules
    "E501",  # Black is less aggressive here when touching comments and strings, we're going to let those through.
    "G004",  # logging-f-string, these are fine for now

    # Rule Groupings
    "D",     # pydocstyle is for docs... we have none
    "FBT",   # flake-boolean-trap... disallows boolean args to functions... fixing this code will require refactors.
    "ANN",   # flake8-annotations is for typed code
    "DJ",    # django specific
    "PYI",   # pyi is typing stub files
    "PT",    # pytest specific
    "PTH",   # pathlib is preferred, but we're not using it yet
    "PD",    # pandas specific
    "NPY",   # numpy specific
    "TD",    # todos
    "FIX",   # fixmes
]
line-length = 88
select = [
    "ALL"
]
target-version = "py311"

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.per-file-ignores]
'*test*' = [
    'ARG002', # allow unused method arguments
    'SLF001', # allow private access
    'PLR0913', # allow high arity functions
]
'*migration*' = [
    'N999', # allow invalid module names
]
'*clickhouse*' = [
    'S608' # unsafe sql
]

[tool.ruff.pylint]
max-args = 6

[tool.ruff.format]
quote-style = "single"
