[project]
name = "seqr_loading_luigi_pipeline"
version = "1.5.3"
requires-python = ">=3.8"
dependencies = [
    "elasticsearch==7.9.1",
    "hail>=0.2.77",
    "luigi==2.8.11",
    "google-api-python-client>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "isort>=5.12.0",
    "nose>=1.3.7",
    "pre-commit>=3.2.0",
    "pip-tools>=6.12.3",
    "responses>=0.23.1",
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "lib"}

[tool.isort]
force_sort_within_sections = "True"
include_trailing_comma = "True"
known_external_package = ['hail_scripts']
profile = "black"
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'EXTERNAL_PACKAGE', 'FIRSTPARTY', 'LOCALFOLDER']
